fixed slice component for bg color and extra padding

--- a/app/sass/_overrides.sass
+++ b/app/sass/_overrides.sass
@@ -114,7 +114,7 @@ ul.media-list
 .slice
   background: $vcu-identity
   .content
-    background: $vcu-identity
+    background: none
 
 .home
   .container.full
